--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -5,6 +5,7 @@ slug: "/about"
 
 Hi!
 
-Remus Lupin - also known as Moony - is currently teaching "Defense against the Dark Arts" at Hogwarts. He was afflicted with lycanthropy during his childhood, as a result of Fenrir Greyback's revenge against Lyall. He attended Hogwarts School of Witchcraft and Wizardry from 1971-1978 and was Sorted into Gryffindor House. During his school years he was one of the Marauders, best friends with Sirius Black, James Potter, and Peter Pettigrew. Together they created the Marauder's Map.
+I am a graduate of 16 weeks, SQA accredited Professional Software Development course which teaches the fundamentals of software development using Agile best practices, OOP, TDD. The course includes over 800 hours of instructor led coding, pair programming, solo and group software application projects
 
-He fought against Death Eaters once more in the Second Wizarding War, during which he lost his friend Sirius. In 1997, Remus married fellow Order member Nymphadora Tonks and had a son, Edward Remus Lupin, of whom he named Harry the godfather. Remus fought at the Battle of Hogwarts on 2 May, 1998, during which his wife was murdered by Bellatrix Lestrange. Remus was also murdered by Death Eater, Antonin Dolohov, during the first half of the same battle. His death was avenged by Filius Flitwick.
+Industry Knowledge: Test Driven Development, Agile SDLC, Full Stack Web Development, Object Oriented Programming, RESTful APIs, UX/UI Design, SOLID Principles
+
