--- a/src/texts/hero.mdx
+++ b/src/texts/hero.mdx
@@ -2,5 +2,6 @@
   Hi.
 </Text>
 
-I'm Kat - currently teaching "Defense against the Dark Arts" at Hogwarts, Great Britain. I recently published a book called [Those nasty Dementors](https://www.lekoarts.de).
-It teaches everything you need to know about defending against Dementors.
+<p>I'm Kat - my spirit animal is a magpie.</p>
+<p>I am a student of 16 weeks, SQA accredited Professional Software Development course at CodeClan which teaches the fundamentals of software developmentation, programing languages but also how to learn and how to stay <strong>curious</strong>.</p>
+<p>Here are examples my outside school learning</p>
