second post update

--- a/content/pages/contact/index.mdx
+++ b/content/pages/contact/index.mdx
@@ -5,6 +5,6 @@ slug: "/contact"
 
 Hi!
 
-Looking for more my personal data that I have alreday sheared with you on top of this page?
-You can contact me via email too: 
-<katarzyna.kmiotek@yahoo.com>
+You can contact me via email: 
+<contact@katk.dev> 
+or my [LinkedIn](https://www.linkedin.com/in/katarzyna-kmiotek/) or [GitHub](https://github.com/KatKmiotek) account
