--- a/content/posts/fox-things/index.mdx
+++ b/content/posts/fox-things/index.mdx
@@ -26,6 +26,32 @@ Moving to shopping cart there are few key points here. You can select how many y
 Create account. Pay with your card/ PayPal. Make sure you won't auto renew Premium DNS (If as me don't need it).  
 
 ### What next?
-Verify email, email from CEO
+Now few emails should arrive to your mailbox: welcome from CEO of namecheap, payment confirmation and domain verification email. The last one requires more attention as it the key to have your domain up and running in 24-48h. I didn’t receive it straight away so had to:
+go to my namecheap account
+select domains from the left sidebar
+and there click on verify contact button
+Verification email will be resent so just click in it to confirm details 
+
+### Email? Why not
+namecheap offers two solutions for customers wanting to have email address/es with their domain name. This definitely looks more professional and makes it a good branding practice.  
+** Private email: **  
+It is a paid service (£7/year) is a cloud-based open-source collaboration software that meets all necessary email, calendar and contacts, tasks management and document storage needs. But it’s paid feature.  
+** Email forwarding: **  
+The service I decided to set up for my domain as apart that is ** free ** meets my current needs. I don’t expect at the moment too much traffic here so linking domain email address with my private one has more sense. How to set it up?  
+In account dashboard select ** Domain List ** from the left sidebar. On a right hand side on chosen domain  click ** manage **  and scroll down on domain features to ** email forwarding **
+![email forwarding](./emailforwarding.png)
+As an ** Alias ** you can put anything you want `info`, `KatarzynaKmiotek`, `contact` etc.   
+** Forward to ** it is a email mailbox you want to receive emails sent to domain email.   
+Feature should be available within 30 min (can take longer). Testing it by sending email from _ forward to _ email may not work.  
+  
+And here it is!
+![domain email](./email.png)
+
+### Support  
+Namecheap has a great support team available for live chat 24/7.
+Waiting for domain to be set up can take good few days.
+
+
+
 
 
