--- a/src/texts/hero.mdx
+++ b/src/texts/hero.mdx
@@ -2,6 +2,8 @@
   Hi.
 </Text>
 
-<p>I'm Kat - my spirit animal is a magpie.</p>
-<p>I am a student of 16 weeks, SQA accredited Professional Software Development course at CodeClan which teaches the fundamentals of software developmentation, programing languages but also how to learn and how to stay <strong>curious</strong>.</p>
-<p>Here are examples my outside school learning</p>
+I'm Kat - my spirit animal is a magpie.  
+I wrote my first line of code 4 months ago when joined CodeClan for 16 weeks, SQA accredited Professional Software Development course which teaches the fundamentals of software developmentation, programing languages but also how to stay ** curious **.  
+  
+  
+Here are examples my outside school learning  
