working on tags

--- a/content/posts/fox-things/index.mdx
+++ b/content/posts/fox-things/index.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Personal website Part I: How to own domain?"
 date: 2020-07-19
+tags:
+    - Tutorial
+    - Website
 ---
 
 During career week we were told: it is good to link your personal website on CV and LinkedIn profile. But where to start??  
@@ -48,8 +51,9 @@ And here it is!
 ![domain email](./email.png)
 
 ### Support  
-Namecheap has a great support team available for live chat 24/7.
 Waiting for domain to be set up can take good few days.
+Namecheap has a great support team available for live chat 24/7 if waiting time is too long.
+
 
 
 
