--- a/src/texts/bottom.mdx
+++ b/src/texts/bottom.mdx
@@ -1,3 +1,4 @@
 <Title text="Projects" />
 
-- [Simple weather app made with ** Vue **, deployed on Netlify](https://weather-app-solo-project.netlify.app/)
+- [** Personal portfolio site ** built with Gatsby and deployed on Netlify](https://katk.dev)
+- [Simple ** weather app ** made with Vue, deployed on Netlify](https://weather-app-solo-project.netlify.app/)
