--- a/src/texts/hero.mdx
+++ b/src/texts/hero.mdx
@@ -3,7 +3,7 @@
 </Text>
 
 I'm Kat - my spirit animal is a magpie.  
-I wrote my first line of code 4 months ago when joined CodeClan for 16 weeks, SQA accredited Professional Software Development course which teaches the fundamentals of software developmentation, programing languages but also how to stay ** curious **.  
+I wrote my first line of code 4 months ago when joined CodeClan for 16 weeks, SQA accredited Professional Software Development course which teaches the fundamentals of software development.  
   
   
 Here are examples my outside school learning  
