--- a/src/texts/bottom.mdx
+++ b/src/texts/bottom.mdx
@@ -2,3 +2,4 @@
 
 - [** Personal portfolio site ** built with Gatsby and deployed on Netlify](https://katk.dev)
 - [Simple ** weather app ** made with Vue, deployed on Netlify](https://weather-app-solo-project.netlify.app/)
+- [Java Spring Boot app deployed with Docker to AWS](http://3.10.55.182:8080/whiskies)
