--- a/content/posts/deploying-spring-boot-app/index.mdx
+++ b/content/posts/deploying-spring-boot-app/index.mdx
@@ -86,4 +86,6 @@ And now you can jump back to Bowei’s tutorial and carry on linking Docker with
 [http://3.10.55.182:8080/whiskies](http://3.10.55.182:8080/whiskies)  
 [http://3.10.55.182:8080/distilleries](http://3.10.55.182:8080/distilleries)  
 [http://3.10.55.182:8080/whiskies?region=Highland](http://3.10.55.182:8080/whiskies?region=Highland)  
-etc etc
+etc etc  
+edit. above links are not available anymore...
+![final](./final.png)
