--- a/content/posts/if-hemingway-wrote-js/index.mdx
+++ b/content/posts/if-hemingway-wrote-js/index.mdx
@@ -62,7 +62,7 @@ Does Angus Croll say that developers are artists too?
 
 I know a little about the literature and a little about the art. The title of my dissertation was: 
 _ Ekphrasis is Stanislaw Grochowiak’s selected poems _. I have made a detailed analysis of his ekphrasis 
-and compared them with paintings that relate to. Compared structures, composition, colour palette, 
+and compared them with paintings that relate to. Looked at structures, composition, colour palette, 
 story that both tell.  
 
 I would comapre JavaScript to ancient greek tragedy,
