--- a/content/posts/if-hemingway-wrote-js/index.mdx
+++ b/content/posts/if-hemingway-wrote-js/index.mdx
@@ -6,8 +6,8 @@ tags:
     - Book
 banner: ./main.png
 ---
-Recently I looked at my two diplomas one from Comparative Literature studies ** Jagiellonian University ** and 
-one from Professional Software Development course ** CodeClan **. How different 
+Recently I looked at my two diplomas one from Comparative Literature studies at ** Jagiellonian University ** and 
+one from Professional Software Development course at ** CodeClan**. How different 
 they are! First uses language in all its beauty the second one uses syntax for 
 communication.  
 The book _ If Hemingway wrote JavaScript _ by Angus Croll it's the bridge between 
