hero text changed

--- a/src/texts/hero.mdx
+++ b/src/texts/hero.mdx
@@ -3,7 +3,6 @@
 </Text>
 
 I'm Kat - my spirit animal is a magpie.  
-I wrote my first line of code 4 months ago when joined CodeClan for 16 weeks, SQA accredited Professional Software Development course which teaches the fundamentals of software development.  
-  
-  
-Here are examples my outside school learning  
+I wrote my first line of code when in May 2020 decided to change my career and joined the coding Bootcamp. Now I work as a Test Engineer at 2i Testing.
+I use a few great Test Automation tools: Cypress, Postman, Rest Assured, BDD Cucumber/Gherkin.  
+And the best: __I keep learning!__
